[gd_scene format=3 uid="uid://dfhxwctlns38e"]

[ext_resource type="Script" uid="uid://cu3i1x5urxohg" path="res://Scripts/music_manager.gd" id="1_760hw"]
[ext_resource type="AudioStream" uid="uid://be7jgtlbkfttn" path="res://Assets/Soundtrack/PackingPartsSoundtrack.mp3" id="2_hsxb6"]

[node name="Sound Manager" type="Node" unique_id=2123070553]
script = ExtResource("1_760hw")

[node name="MainSoundtrack" type="AudioStreamPlayer2D" parent="." unique_id=124097025]
unique_name_in_owner = true
stream = ExtResource("2_hsxb6")
autoplay = true
bus = &"Music"

[node name="ItemBreaking" type="AudioStreamPlayer2D" parent="." unique_id=975685028]
unique_name_in_owner = true
bus = &"SFX"

[node name="BoxAssends" type="AudioStreamPlayer2D" parent="." unique_id=919245398]
unique_name_in_owner = true
bus = &"SFX"

[connection signal="finished" from="MainSoundtrack" to="." method="_on_main_soundtrack_finished"]
